# game

./: .gitignore  .gitmodules  CMakeLists.txt  CODING_STYLE.md  README.md
cmake/: CopyResources.cmake  FindLibSFML.cmake  FindRaylib.cmake  FindTest.cmake
data/level1/: paloma-exploid.aseprite
src/: CMakeLists.txt
src/base/: debug.h
src/componentes/: genericos.h
src/engine/: audio_system.cc  audio_system.h  component.h  debug.cc  debug.h  engine.cc  engine.h  entity.h  entity_manager.h  filesystem.h  gameobject.h  level.cc  level.h  mice_manager.cc  mice_manager.h  mouse.h  raylib.cc  raylib.h  result.h  scene.cc  scene.h  system_manager.cc  system_manager.h  timer_manager.cc  timer_manager.h
src/engine/assets/: sound.h  texture.cc  texture.h  texture_atlas.cc  texture_atlas.h  texture_pool.cc  texture_pool.h  tile.cc  tile.h
src/engine/assets/priv/: raylib_wrapper.h
src/engine/components/: animation.h  bounce.h  component.h  hitbox.h  input.h  position.h  shoot.h  sprite.h  text.h  transform.h  velocity.h
src/engine/gfx/: texture.cc  texture.h  tile.cc  tile.h
src/engine/gfx/priv/: raylib_wrapper.h
src/engine/systems/: animation.cc  animation.h  draw.cc  draw.h  hitbox.cc  hitbox.h  hitboxcc  input.cc  input.h  movement.cc  movement.h  player.cc  player.h  shoot.cc  shoot.h  system.h
src/entidades/: entidad.h  pato.h  player.h
src/game/: app.cc  app.h  level0.cc  level0.h  level1.cc  level1.h  main.cc
src/manager/: entmanager.h
src/sistemas/: movimiento.h  visualizar.h
tests/: CMakeLists.txt  test_engine_1.cc  test_engine_A.cc  test_engine_entities.cc  test_engine_level.cc  test_engine_main.cc  test_engine_mice.cc  test_engine_texatlas.cc  test_engine_texture.cc  test_engine_tile.cc  test_engine_timers.cc
